@@ -1,3 +1,8 @@
+2011-11-29  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (cmd_put_data) [PINPAD_SUPPORT]: Support pinpad
+	input (for reset code).
+
 2011-11-24  Niibe Yutaka  <gniibe@fsij.org>
 
 	* Version 0.15.
